// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  <p
    class="css-1y6cmsr"
    data-chakra-component="CText"
    data-testid="text"
  >
    Text Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <p
    class="css-fzcsno"
    data-chakra-component="CText"
    data-testid="text"
  >
    Text Works
  </p>
</DocumentFragment>
`;
